--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity1" />
+        <activity android:name=".activity2" />
+        <activity android:name=".activity3"></activity>
     </application>
 
 </manifest>
